css/base.css
/* Do not change these values. This is the core layout. */

html,
body {
  background-color: #fdfdfd;
  height: 100%;
}

body * {
  box-sizing: border-box;
}

.outtie {
  min-height: 100%;
  padding: 48px 24px;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.innie {
  max-width: 792px;

  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 40px;
  row-gap: 48px;
  grid-template-areas:
    "therest"
    "footie";
}

.therest {
  grid-area: therest;

  display: flex;
  flex-flow: column nowrap;
  row-gap: 48px
}

/* -------------- Header & Main Nav -------------- */

.headie {
  grid-area: headie;

  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  gap: 24px;
}

.site-nav {
  width: 100%;

  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  gap: 24px;
}

.site-header {
  width: 100%;

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 8px;
}


/* -------------- Main Content -------------- */

.mainie {
  grid-area: mainie;

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 24px;
}

section {
  width: 100%;

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 24px;
}

/* Section Components */
/* Section: Content Grid */

.content-grid {
  width: 100%;

  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: center;
  gap: 64px;
}

.image_title {
  min-width: 272px;
  max-width: 360px;
  height: 248px;
}

.image_title a {
  width: 100%;
  text-decoration: none;

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 8px;
}

.image_title h2 {
  text-align: center;
}

.image_title a:hover * {
  color: #941487;
}

.image_title img {
  min-width: 272px;
  max-width: 360px;
  max-height: 240px;
}

.link_icon {
  width: 100%;
}

.link_icon a {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  gap: 8px;

  font-size: 24px;
  font-weight: 500;

  text-decoration: none;
}

.link_icon a[class="center"] {
  justify-content: center;
}

.link_icon img {
  width: 24px;
}

.icon_text {
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  gap: 8px;
}

.icon_text img {
  width: 24px;
}


/* Section: Article */

article {
  width: 100%;

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 24px;
}

.article-header {
  width: 100%;

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 8px;
}

.article-title,
.article-subtitle {
  width: 100%;
  text-align: center;
}

.article-body {
  width: 100%;

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 32px;
}

.body_title_desc {
  width: 100%;
  display: flex;
  flex-flow: column nowrap;
  gap: 16px;
}

.body_image_caption {
  width: 100%;
  display: flex;
  flex-flow: column wrap;
  gap: 8px;
}

.body_title_list {
  width: 100%;
  display: flex;
  flex-flow: column nowrap;
  gap: 8px;
}

/* -------------- FOOTER (SOCIAL LINKS) -------------- */
.footie {
  grid-area: footie;
  width: 100%;

  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  gap: 24px
}

.socials-links {
  width: 100%;

  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  gap: 24px;
}

.social-icon {
  height: 24px;
}

/* Images */
.img {
  min-width: 272px;
  width: 100%;
  margin-top: 16px;
  margin-bottom: 16px;
}

.landscape {
  max-width: 540px;
}

.portrait {
  max-width: 360px;
}

.square {
  max-width: 360px;
  border-radius: 24px;
}

.tri-image-display {
  display: flex;
  flex-flow: row wrap-reverse;
  justify-content: center;
  gap: 24px;
}

.dual-image-display {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  gap: 24px;
}

.dual-image-display figcaption,
.tri-image-display figcaption {
  width: 100%;
  max-width: 360px;
}

/* Texture */
.indent {
  padding-left: 2em;
}

* {
  color: #303030;
  font-family: 'Jost', sans-serif;
}

.site-title {
  font-size: 48px;
  font-weight: 700;
}

.site-subtitle {
  font-size: 16px;
  font-weight: 300;
}

h1 {
  font-size: 32px;
  font-weight: 700;
}

h2 {
  font-size: 24px;
  font-weight: 700;
}

h3 {
  font-size: 20px;
  font-weight: 700;
}

.article-subtitle {
  font-size: 20px;
  font-weight: 400;
}

.body-regular {
  font-size: 20px;
  font-weight: 300;
}

figcaption {
  font-size: 20px;
  font-weight: 300;
  font-style: italic;
  color: 555555;
}

nav a {
  font-size: 24px;
  font-weight: 500;
  color: #1F9EC7;
  text-decoration: none;
}

nav a:hover {
  font-size: 24px;
  font-weight: 500;
  color: #941487;
}

nav a:active {
  font-size: 24px;
  font-weight: 500;
  color: #941487;
}

a,
a h2 {
  color: #1F9EC7;
}

a:hover {
  color: #941487;
}

@media only screen and (min-width: 668px) {
  .dual-image-display {
    flex-flow: row nowrap;
  }

  .image_title {
    height: 336px;
  }

}

